# cloudapps-cli

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  deny.toml
.github/workflows/: ci.yml  release.yml
docs/specifications/: 00-index.md  01-overview.md  02-authentication.md  03-api-client.md  04-resources-activities.md  05-resources-alerts.md  06-resources-entities.md  07-resources-files.md  08-resources-data-enrichment.md  09-output-format.md  10-project-structure.md  11-testing.md  12-ci-cd.md  13-homebrew.md  14-pre-release-checklist.md  15-ux-improvements.md
src/: error.rs  help_for_ai.rs  lib.rs  main.rs
src/auth/: mod.rs  token.rs
src/cli/: activities.rs  alerts.rs  data_enrichment.rs  entities.rs  files.rs  mod.rs
src/client/: mod.rs  pagination.rs  request.rs  response.rs  retry.rs
src/commands/: activities.rs  alerts.rs  data_enrichment.rs  entities.rs  files.rs  mod.rs
src/config/: mod.rs
src/models/: activity.rs  alert.rs  data_enrichment.rs  entity.rs  file.rs  filter.rs  mod.rs
src/output/: json.rs  table.rs
testdata/activities/: fetch_response.json  list_response.json
testdata/alerts/: fetch_response.json  list_response.json
testdata/data_enrichment/: create_response.json  list_response.json
testdata/entities/: fetch_response.json  list_response.json
testdata/files/: fetch_response.json  list_response.json
tests/: activities_test.rs  alerts_test.rs  data_enrichment_test.rs  entities_test.rs  files_test.rs
tests/common/: mod.rs
